--- a/index.html
+++ b/index.html
@@ -4,287 +4,304 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheerleader Nutrition Game</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <style>
-       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-body {
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    background-color: #f0f2f5;
-    margin: 0;
-}
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f8f9fa;
+            text-align: center;
+        }
 
-.game-container {
-    width: 90%;
-    max-width: 500px;
-    margin: auto;
-    background: white;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    margin-top: 50px;
-}
+        .game-container {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            max-width: 450px;
+            margin: 5% auto;
+        }
 
-img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
+        img {
+            width: 100%;
+            border-radius: 10px;
+        }
 
-.button-container button {
-    padding: 12px;
-    margin: 10px;
-    border: none;
-    font-size: 18px;
-    border-radius: 8px;
-    cursor: pointer;
-    width: 100%;
-    transition: 0.3s;
-}
+        .btn {
+            width: 100%;
+            font-size: 18px;
+            padding: 12px;
+            border-radius: 8px;
+            transition: all 0.3s;
+        }
 
-.healthy { 
-    background-color: #28a745; 
-    color: white; 
-}
-.unhealthy { 
-    background-color: #dc3545; 
-    color: white; 
-}
+        .btn-healthy {
+            background-color: #28a745;
+            color: white;
+        }
 
-#popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.8);
-    width: 80%;
-    max-width: 400px;
-    background: white;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    opacity: 0;
-    transition: 0.3s ease-in-out;
-    visibility: hidden;
-}
+        .btn-unhealthy {
+            background-color: #dc3545;
+            color: white;
+        }
 
-#popup.show {
-    opacity: 1;
-    visibility: visible;
-    transform: translate(-50%, -50%) scale(1);
-}
+        .btn:hover {
+            opacity: 0.8;
+        }
 
-.correct {
-    color: green;
-    font-weight: bold;
-}
+        /* Popup styling */
+        #popup {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0.8);
+            width: 80%;
+            max-width: 400px;
+            background: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            opacity: 0;
+            transition: 0.3s ease-in-out;
+            visibility: hidden;
+        }
 
-.wrong {
-    color: red;
-    font-weight: bold;
-}
+        #popup.show {
+            opacity: 1;
+            visibility: visible;
+            transform: translate(-50%, -50%) scale(1);
+        }
 
-#summary p {
-    font-size: 16px;
-    text-align: left;
-}
+        .correct {
+            color: green;
+            font-weight: bold;
+        }
 
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    .game-container {
-        padding: 15px;
-    }
+        .wrong {
+            color: red;
+            font-weight: bold;
+        }
 
-    img {
-        max-width: 100%;
-        border-radius: 8px;
-    }
+        /* Summary Styling */
+        #summary {
+            text-align: left;
+            background: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            margin: auto;
+            display: none;
+        }
 
-    .button-container button {
-        font-size: 16px;
-        padding: 10px;
-    }
+        #summary p {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
 
-    #popup {
-        width: 90%;
-        max-width: 350px;
-    }
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .game-container {
+                padding: 20px;
+            }
 
-    #summary {
-        padding: 15px;
-        width: 90%;
-        margin: auto;
-    }
-}
+            .btn {
+                font-size: 16px;
+                padding: 10px;
+            }
 
-@media (max-width: 480px) {
-    body {
-        font-size: 14px;
-    }
+            #popup {
+                width: 90%;
+                max-width: 350px;
+            }
 
-    .game-container {
-        margin-top: 30px;
-    }
+            #summary {
+                width: 90%;
+            }
+        }
 
-    .button-container button {
-        font-size: 14px;
-        padding: 8px;
-    }
+        @media (max-width: 480px) {
+            body {
+                font-size: 14px;
+            }
 
-    #popup {
-        width: 90%;
-        max-width: 300px;
-        padding: 15px;
-    }
+            .game-container {
+                margin-top: 30px;
+            }
 
-    #summary {
-        font-size: 14px;
-    }
+            .btn {
+                font-size: 14px;
+                padding: 8px;
+            }
 
-    h1 {
-        font-size: 18px;
-    }
-}
+            #popup {
+                width: 90%;
+                max-width: 300px;
+                padding: 15px;
+            }
+
+            #summary {
+                font-size: 14px;
+            }
+
+            h1 {
+                font-size: 18px;
+            }
+        }
 
     </style>
 </head>
 <body>
 
-        <div class="game-container" id="name-input-container">
+    <!-- Name Input Screen -->
+    <div class="game-container" id="name-input-container">
         <h1>Enter Your Name</h1>
-        <div class="input-container">
-            <input type="text" id="player-name" placeholder="Your Name">
-            <button onclick="startGame()">Start</button>
+        <div class="input-group mb-3">
+            <input type="text" id="player-name" class="form-control" placeholder="Your Name">
         </div>
+        <button class="btn btn-primary" onclick="startGame()">Start</button>
     </div>
 
+    <!-- Popup -->
     <div id="popup">
-    <h2>Result</h2>
-    <p id="popup-text"></p>
-    <button onclick="restartGame()">Restart</button>
-</div>
+        <h2>Result</h2>
+        <p id="popup-text"></p>
+        <button id="next-btn" class="btn btn-secondary mt-2" onclick="nextQuestion()" style="display: none;">Next</button>
+        <button class="btn btn-danger mt-2" onclick="restartGame()">Restart</button>
+    </div>
 
+    <!-- Game Container -->
     <div class="game-container" id="game-container" style="display: none;">
         <h1>Cheerleader Nutrition Game</h1>
         <h2 id="player-display"></h2>
-        <h2 id="lives">❤️ Lives: 3</h2>
-        <h2 id="score">⭐ Score: 0</h2>
+        <h4 id="lives">❤️ Lives: 3</h4>
+        <h4 id="score">⭐ Score: 0</h4>
 
         <img id="food-image" src="" alt="Food Image">
 
-        <div class="button-container">
-            <button class="healthy" onclick="checkAnswer(true)">Healthy</button>
-            <button class="unhealthy" onclick="checkAnswer(false)">Unhealthy</button>
+        <div class="mt-3">
+            <button class="btn btn-healthy" onclick="checkAnswer(true)">Healthy</button>
+            <button class="btn btn-unhealthy mt-2" onclick="checkAnswer(false)">Unhealthy</button>
         </div>
     </div>
 
-    <div id="summary" style="display: none;">
+    <!-- Summary -->
+    <div id="summary">
         <h2>Game Summary</h2>
         <p id="summary-text"></p>
-        <button onclick="restartGame()">Restart</button>
+        <button class="btn btn-warning mt-2" onclick="restartGame()">Restart</button>
     </div>
 
     <script>
         const foods = [
-            { name: "Salad", img: "salad.jpg", isHealthy: true, info: "Salads provide essential vitamins and hydration, helping cheerleaders stay energetic." },
-            { name: "Pizza", img: "pizza.jpg", isHealthy: false, info: "Pizza has excess fat and refined carbs, which can slow down performance." },
-            { name: "Fruits", img: "fruits.jpg", isHealthy: true, info: "Fruits are rich in antioxidants and natural sugars, providing quick and sustained energy." },
-            { name: "Soda", img: "soda.jpg", isHealthy: false, info: "Soda is loaded with sugar, causing energy crashes that affect stamina." },
-            { name: "Chicken", img: "chicken.jpg", isHealthy: true, info: "Lean protein like grilled chicken supports muscle recovery and strength." },
-            { name: "Burger", img: "burger.jpg", isHealthy: false, info: "High-fat foods like burgers can make cheerleaders feel sluggish." }
-        ];
+    { name: "Salad", img: "salad.jpg", isHealthy: true, info: "Salads provide essential vitamins and hydration, helping cheerleaders stay energetic." },
+    { name: "Pizza", img: "pizza.jpg", isHealthy: false, info: "Pizza has excess fat and refined carbs, which can slow down performance." },
+    { name: "Fruits", img: "fruits.jpg", isHealthy: true, info: "Fruits are rich in antioxidants and natural sugars, providing quick and sustained energy." },
+    { name: "Soda", img: "soda.jpg", isHealthy: false, info: "Soda is loaded with sugar, causing energy crashes that affect stamina." },
+    { name: "Chicken", img: "chicken.jpg", isHealthy: true, info: "Lean protein like grilled chicken supports muscle recovery and strength." },
+    { name: "Burger", img: "burger.jpg", isHealthy: false, info: "High-fat foods like burgers can make cheerleaders feel sluggish." },
+    { name: "Pasta", img: "pasta.jpg", isHealthy: true, info: "Pasta provides complex carbohydrates, offering long-lasting energy." },
+    { name: "Donuts", img: "donuts.jpg", isHealthy: false, info: "Donuts are high in sugar and unhealthy fats, leading to energy crashes." },
+    { name: "Fish", img: "fish.jpg", isHealthy: true, info: "Fish is rich in omega-3s and helps with muscle recovery and brain function." },
+    { name: "French Fries", img: "fries.jpg", isHealthy: false, info: "French fries contain trans fats and excess sodium, which can cause dehydration." },
+    { name: "Smoothie", img: "smoothie.jpg", isHealthy: true, info: "Smoothies with natural ingredients provide vitamins and hydration for better performance." }
+];
 
-        let playerName = "";
+      let playerName = "";
 let score = 0;
 let lives = 3;
 let currentFoodIndex = 0;
 let answers = [];
+let shuffledFoods = [];
 
-        function startGame() {
-            playerName = document.getElementById("player-name").value || "Player";
-            alert(`Welcome, ${playerName}! The game will start now.`);
-            document.getElementById("player-display").textContent = `👤 ${playerName}`;
-            document.getElementById("name-input-container").style.display = "none";
-            document.getElementById("game-container").style.display = "block";
-            loadFood();
-        }
+function startGame() {
+    playerName = document.getElementById("player-name").value || "Player";
+    alert(`Welcome, ${playerName}! The game will start now.`);
+    document.getElementById("player-display").textContent = `👤 ${playerName}`;
+    document.getElementById("name-input-container").style.display = "none";
+    document.getElementById("game-container").style.display = "block";
 
-        function loadFood() {
-            if (lives <= 0 || currentFoodIndex >= foods.length) return showSummary();
-            document.getElementById("food-image").src = foods[currentFoodIndex].img;
-        }
+    shuffledFoods = [...foods]; // Use all foods in order
+    loadFood();
+}
 
-       function checkAnswer(playerChoice) {
-    let food = foods[currentFoodIndex];
+function loadFood() {
+    if (lives <= 0 || currentFoodIndex >= shuffledFoods.length) {
+        showSummary();
+        return;
+    }
+
+    document.getElementById("food-image").src = shuffledFoods[currentFoodIndex].img;
+}
+
+function checkAnswer(playerChoice) {
+    let food = shuffledFoods[currentFoodIndex];
     let correctChoice = food.isHealthy;
     let result = playerChoice === correctChoice ? "Correct" : "Wrong";
 
-    if (playerChoice === correctChoice) {
+    if (correctChoice === playerChoice) {
         score++;
-        showPopup(`${result}! ${food.info}`, true);  // Correct answer
+        showPopup(`${result}! ${food.info}`, true);
     } else {
         lives--;
         document.getElementById("lives").textContent = `❤️ Lives: ${lives}`;
-        showPopup(`${result}! ${food.info}`, false); // Incorrect answer
+        showPopup(`${result}! ${food.info}`, false);
     }
 
     answers.push(`${food.name}: ${result} - ${food.info}`);
     document.getElementById("score").textContent = `⭐ Score: ${score}`;
-    currentFoodIndex++;
 }
 
-
-
-        function showPopup(message, isCorrect) {
+function showPopup(message, isCorrect) {
     let popupText = document.getElementById("popup-text");
     popupText.textContent = message;
-
-    // Apply the correct class based on whether the answer is correct or wrong
-    if (isCorrect) {
-        popupText.className = "correct"; // Green for correct
-    } else {
-        popupText.className = "wrong"; // Red for wrong
-    }
+    popupText.className = isCorrect ? "correct" : "wrong";
 
     document.getElementById("popup").classList.add("show");
+    document.getElementById("next-btn").style.display = "block"; 
 }
 
+function nextQuestion() {
+    document.getElementById("popup").classList.remove("show");
+    document.getElementById("next-btn").style.display = "none";
 
-        function closePopup() {
-            document.getElementById("popup").classList.remove("show");
-            loadFood();
-        }
+    currentFoodIndex++;
+    if (currentFoodIndex < shuffledFoods.length) {
+        loadFood();
+    } else {
+        showSummary();
+    }
+}
 
-       function showSummary() {
-    // Generate the summary with food names, not image filenames
+function showSummary() {
     let summaryText = `<strong>${playerName}'s Score: ${score}</strong><br><br>` + answers.join("<br>");
     document.getElementById("popup-text").innerHTML = summaryText;
     document.getElementById("popup").classList.add("show");
 }
-function loadFood() {
-    if (lives <= 0 || currentFoodIndex >= foods.length) return showSummary();
-    document.getElementById("food-image").src = foods[currentFoodIndex].img;
-}
 
-
-
-        function restartGame() {
-    // Reset the game variables
+function restartGame() {
     score = 0;
     lives = 3;
     currentFoodIndex = 0;
     answers = [];
+
     document.getElementById("score").textContent = `⭐ Score: ${score}`;
     document.getElementById("lives").textContent = `❤️ Lives: ${lives}`;
-
-    // Hide the summary popup and show the game container
     document.getElementById("popup").classList.remove("show");
     document.getElementById("summary").classList.remove("show");
     document.getElementById("game-container").style.display = "block";
 
-    // Reload the game
+    shuffledFoods = [...foods]; // Reset all 11 questions
     loadFood();
 }
+
+
     </script>
 </body>
 </html>
